# quantpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conda-requirements  input.json  mypy.ini  pyproject.toml  setup.py  tox.ini
examples/: confidence_intervals.ipynb  state_tomography.ipynb
notebooks/: Fidelity.ipynb  Hölder.ipynb  Imports.ipynb  Interface.ipynb  Intervals.ipynb  Ion Data.ipynb  Japan.ipynb  Moments.ipynb  Polytopes radius.ipynb  Polytopes.ipynb  Sandbox.ipynb  Teleportation.ipynb  Verification.ipynb
polytopes/: README.md
polytopes/notebooks/: Fidelity.ipynb  IBM teleportation.ipynb  Imports.ipynb  Verification.ipynb
polytopes/results/: processes_meas.pkl  processes_qubits_10k.pkl  states_meas.pkl  states_qubits_10k.pkl
quantpy/: __init__.py  base_quantum.py  basis.py  channel.py  gate.py  geometry.py  measurements.py  metrics.py  mhmc.py  operator.py  polytope.py  qobj.py  qpt.py  qstate.py  quantpy.py  routines.py  stats.py  tomography.py
quantpy/tomography/: __init__.py  interval.py  process.py  state.py
quantpy/tomography/polytopes/: utils.py  verification.py
scripts/: process_interval.py  state_interval.py
