[tool.poetry]
name = "quantpy"
version = "0.1.0"
description = ""
authors = ["nordmtr <nordmtr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"
pandas = "^1.3.2"
tqdm = "^4.62.1"
matplotlib = "^3.4.3"
torch = "^1.9.0"
polytope = "^0.2.3"
einops = "^0.3.0"
cvxopt = "^1.2.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.14.0"
jupyter-contrib-nbextensions = "^0.5.1"
autoflake = "^1.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | notebooks
  | submodules
  )/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["quantpy"]
skip = "submodules"

[tool.mypy]
plugins="numpy.typing.mypy_plugin"
